force-app/main/default/objects/Holiday_Schedule_Line__c/Holiday_Schedule_Line__c.object-meta.xml
<CustomObject>
    <description>Admin Object used to manage Case Business Hours.  This object is the junction between Holidays &amp; Holiday Schedule.
Refer to Case#06096317 for more details.</description>
    <label>Holiday Schedule Line</label>
    <nameField>
        <displayFormat>H-{000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holiday Schedule Lines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>