force-app/main/default/objects/Holiday_Schedule_Line__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday</label>
    <referenceTo>Holiday__c</referenceTo>
    <relationshipLabel>Holiday Schedule Lines</relationshipLabel>
    <relationshipName>Holiday_Schedule_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>