force-app/main/default/objects/Holiday_Schedule_Line__c/fields/Holiday_Date__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Date__c</fullName>
    <formula>Holiday__r.Holiday_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Holiday Date</label>
    <type>Date</type>
</CustomField>