force-app/main/default/objects/Holiday_Schedule_Line__c/fields/Holiday_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Schedule</label>
    <referenceTo>Holiday_Schedule__c</referenceTo>
    <relationshipLabel>Holiday Schedule Lines</relationshipLabel>
    <relationshipName>Holiday_Schedule_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>